--- a/css/main.css
+++ b/css/main.css
@@ -51,8 +51,11 @@ img {
     display:block;
     max-width: 100%;
     min-width: 33%;
+    min-height: 200%;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 0.2em;
+
 }
 
 .text-center {
@@ -62,6 +65,7 @@ img {
 header,
 section {
     padding: 3rem 0;
+
 }
 
 @media (min-width: 50em) {
@@ -72,6 +76,7 @@ section {
 .container {
     margin-inline: auto;
     width: min(90%, 66rem);
+
 }
 
 @media (max-width: 50em) {
@@ -84,6 +89,8 @@ section {
 .split {
     display:flex;
     flex-direction: column;
+    border-radius: 1.2em 0.2em 1.2em 0.2em;
+    padding: 1.2em;
 }
 
 @media (min-width: 50em) {
