--- a/css/main.css
+++ b/css/main.css
@@ -45,16 +45,19 @@ h2,
 h3,
 p {
     margin-bottom: 1em;
+    padding: 1em;
+
 }
+
 
 img {
     display:block;
     max-width: 100%;
     min-width: 33%;
-    min-height: 200%;
+    min-height: 100%;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 0.2em;
+    border-radius: 0.2em 0.2em 1.2em 0.2em;
 
 }
 
@@ -90,7 +93,7 @@ section {
     display:flex;
     flex-direction: column;
     border-radius: 1.2em 0.2em 1.2em 0.2em;
-    padding: 1.2em;
+    padding: 0em;
 }
 
 @media (min-width: 50em) {
@@ -103,7 +106,7 @@ section {
     }
 
     .split > * + * {
-        margin-left: 2em;
+        margin-left: 0em;
     }
 }
 
