--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@
     --ff-accent: 'Roboto Slab', serif;
 
     --transition-time-1: 700ms;    
+
+    --pad-amount-narrow: 1rem;
+    --pad-amount-wide: 2rem;
+
 }
 
 *,
@@ -18,10 +22,35 @@
     box-sizing: border-box;
 }
 
+@media (min-width: 700px){
+    header,
+    section {
+        padding: var(--pad-amount-wide);
+    }
+    .split {
+        flex-direction: row;
+    }
+    .split > * {
+        flex-basis: 100%;
+    }
+}
+@media (max-width: 700px){
+    header,
+    section {
+        padding: var(--pad-amount-narrow);
+    }
+    .container {
+        max-width: 80%;
+    }    
+    .split {
+        flex-direction: column;
+    }
+}
+
 body{
     font-family: var(--ff-primary);
     font-weight: 500;
-    font-size: 1.3rem;
+    font-size: clamp(11pt, 2.5vw, 1em); 
     line-height: 1.6;
     text-align: justify;
 }
@@ -43,56 +72,50 @@ h3 {
 }
 
 h2,
+h3 {
+    font-size: clamp(12pt, 2.5vw, 1em); 
+
+}
+
+h2,
 h3,
 p {
-    margin-bottom: 1em;
-    padding: 1em;
+    margin-bottom: 0em;
+    padding: 0.75em;
 
 }
 
 
 img {
     display:block;
-    max-width: 100%;
-    min-width: 33%;
-    min-height: 100%;
+    width: 100%;
+    height: 100%;
     margin-left: auto;
     margin-right: auto;
-    filter: saturate(0.25);   
+    filter: saturate(1.2);   
     transition-property: filter;
     transition-duration: var(--transition-time-1); 
 }
 
+h2,
+h3,
 .text-center {
     text-align: center;
 }
 
-header,
-section {
-    padding: 3rem 0;
-
-}
-
-@media (min-width: 50em){
-    padding: 7rem 0;
-}
-
 .container {
+    --min-width-container: 350px;
+    --width-container: clamp(var(--min-width-container), 90%,800px);
     margin-inline: auto;
-    width: min(90%, 66rem);
+    width: var(--width-container);
+    min-width: var(--min-width-container);
+    max-height: calc(0.2 * var(--width-container));
+    min-height: calc(0.2 * var(--width-container));
 }
-
-@media (max-width: 50em) {
-    .container {
-        max-width: 66%;
-    }    
-}
-
 
 .split {
     display:flex;
-    flex-direction: column;
-    border-radius: 1.2em 0.2em 1.2em 0.2em;
+    border-radius: 2em 0.2em 2em 0.2em;
     overflow: hidden;
     padding: 0em;
 
@@ -106,21 +129,6 @@ section {
 
 .split:hover img{
     filter: saturate(1);
-}
-
-
-@media (min-width: 50em) {
-    .split {
-        flex-direction: row;
-    }
-
-    .split > * {
-        flex-basis: 100%;
-    }
-
-    .split > * + * {
-        margin-left: 0em;
-    }
 }
 
 .container--narrow {
